--- a/FlappyAnimal/templates/profile.html
+++ b/FlappyAnimal/templates/profile.html
@@ -1,1 +1,13 @@
+{% extends 'base.html' %}
 
+{% block content %}
+
+<nav class="navbarDark">
+    <p class="dlogin">WELCOME TO FLAPPYANIMAL</p>
+  </nav>
+  <form action="/" class="login_Form" method="POST">
+      <button type="submit" class="btn-submit">Logout</button>
+  </form>
+
+  
+{% endblock %}
