--- a/FlappyAnimal/templates/base.html
+++ b/FlappyAnimal/templates/base.html
@@ -1,1 +1,14 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" type = "text/css" href="{{ url_for('static', filename = 'css/style.css') }}">
+</head>
+<body>
+    {% block content %}
+    {% endblock %}
+
+</body>
+</html>
