--- a/FlappyAnimal/templates/success.html
+++ b/FlappyAnimal/templates/success.html
@@ -1,1 +1,11 @@
 
+{% extends 'base.html'%}
+
+{% block content %}
+
+<nav class="navbarDark">
+    <p class="dlogin">Registration is Succss</p>
+  </nav>
+  <a href="{{ url_for('homePage') }}">Go back</a>
+
+{% endblock %}
