--- a/FlappyAnimal/templates/login.html
+++ b/FlappyAnimal/templates/login.html
@@ -19,7 +19,7 @@ Login
               <input class= "password" type="password" placeholder=" Password" name="password" required>
           </div>
               <button class = "submitBtn" type="submit">{%block button%}Login{%endblock%}</button>
-              
+               New user <a href="{{ url_for('signUpPage') }}">Sign up here</a>
           </div>
           
       </form>
