--- a/FlappyAnimal/templates/profile.html
+++ b/FlappyAnimal/templates/profile.html
@@ -13,8 +13,8 @@
     </p>
  </nav>
   <form class="login_Form" action="/profile" method="POST">
-    <button type="submit" class="btn-submit">Update</button>
-    <button type="submit" class="btn-submit">Logout</button>
+    <button type="submit" class="submitBtn">Update</button>
+    <button type="submit" class="submitBtn">Logout</button>
   </form>
   
 {% endblock %}
